# MultiDBAgent_class5_hw2_ManojKumarY

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: agent.py  config.py  main.py
backend/api/: __init__.py  app.py  message_parser.py  schemas.py
backend/tools/: mongo_tool.py  rag_tool.py  sql_tool.py
docs/: ARCHITECTURE.md  HLD.md  LLD.md
docs/superpowers/specs/: 2026-05-18-ui-ux-fullstack-polish-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts
frontend/src/components/: ToolTrace.tsx  WarningBanner.tsx
frontend/src/components/chat/: Composer.test.tsx  Composer.tsx  MessageList.tsx  SuggestionChips.tsx  TracePanel.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/hooks/: useChatSession.test.tsx  useChatSession.ts
frontend/src/pages/: ChatPage.test.tsx  ChatPage.tsx
frontend/src/types/: index.ts
policies/: discounts.md  return_refund.md  shipping.md
scripts/: index_policies.py  seed_mongo.py  seed_postgres.py
tests/: conftest.py
tests/e2e/: test_agent_e2e.py
tests/unit/: test_api_app_diagnostics.py  test_main_tool_warnings.py  test_mongo_tool.py  test_rag_tool.py  test_sql_tool.py
