[project]
name = "stockpulse-agent"
version = "1.0.0"
description = "Multi-DB conversational agent for StockPulse e-commerce operations"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # LangChain v1 ReAct agent
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",

    # OpenAI SDK (embeddings + chat)
    "openai>=1.30.0",

    # Postgres driver
    "psycopg2-binary>=2.9.9",

    # MongoDB driver
    "pymongo>=4.7.0",

    # Pydantic (FastAPI + Settings)
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # BSON (ObjectId serialization for pymongo)
    "bson>=0.5.10",

    # Environment loading for scripts
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",       # FastAPI TestClient dependency
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
